--- a/ITIResturant/ITIResturant/Views/Shared/Home/_Menu.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_Menu.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Linq
 
 <div class="container">
-    <h1 class="text-center">Our Full Menu</h1>
+    <h1 class="text-center"> @SharedLocalizer["Our Full Menu"]</h1>
 
     <!-- Category Tabs -->
     <ul class="nav nav-pills justify-content-center mb-4">
