--- a/ITIResturant/ITIResturant/Views/Shared/Home/_About.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_About.cshtml
@@ -5,8 +5,10 @@
                 <img src="~/img/about.jpg" class="img-fluid rounded" alt="">
             </div>
             <div class="col-lg-7 wow bounceInUp" data-wow-delay="0.3s">
-                <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">About Us</small>
-                <h1 class="display-5 mb-4">Trusted By 200 + satisfied clients</h1>
+                <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">
+                    @SharedLocalizer["About"]
+                </small>
+                <h1 class="display-5 mb-4">            @SharedLocalizer["Trusted By 200+ satisfied clients"]</h1>
                 <p class="mb-4">
                     Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore eit esdioilore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullaemco laboeeiris nisi ut aliquip ex ea commodo consequat. Duis aute irure
@@ -14,19 +16,19 @@
                 </p>
                 <div class="row g-4 text-dark mb-5">
                     <div class="col-sm-6">
-                        <i class="fas fa-share text-primary me-2"></i>Fresh and Fast food Delivery
+                        <i class="fas fa-share text-primary me-2"></i>  @SharedLocalizer["Fresh and Fast Food Delivery"]
                     </div>
                     <div class="col-sm-6">
-                        <i class="fas fa-share text-primary me-2"></i>24/7 Customer Support
+                        <i class="fas fa-share text-primary me-2"></i>  @SharedLocalizer["24/7 Customer Support"]
                     </div>
                     <div class="col-sm-6">
-                        <i class="fas fa-share text-primary me-2"></i>Easy Customization Options
+                        <i class="fas fa-share text-primary me-2"></i>  @SharedLocalizer["Easy Customization Options"]
                     </div>
                     <div class="col-sm-6">
-                        <i class="fas fa-share text-primary me-2"></i>Delicious Deals for Delicious Meals
+                        <i class="fas fa-share text-primary me-2"></i>   @SharedLocalizer["Delicious Deals for Delicious Meals"]
                     </div>
                 </div>
-                <a asp-controller="Home" asp-action="About" class="btn btn-primary py-3 px-5 rounded-pill">About Us<i class="fas fa-arrow-right ps-2"></i></a>
+                <a asp-controller="Home" asp-action="About" class="btn btn-primary py-3 px-5 rounded-pill">@SharedLocalizer["About"]<i class="fas fa-arrow-right ps-2"></i></a>
             </div>
         </div>
     </div>
