--- a/ITIResturant/ITIResturant/Views/Shared/Home/_Contact.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_Contact.cshtml
@@ -4,39 +4,46 @@
         <div class="p-5 bg-light rounded contact-form">
             <div class="row g-4">
                 <div class="col-12">
-                    <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Get in touch</small>
-                    <h1 class="display-5 mb-0">Contact Us For Any Queries!</h1>
+                    <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">
+                        @SharedLocalizer["Get in touch"]
+                    </small>
+                    <h1 class="display-5 mb-0">@SharedLocalizer["Contact Us For Any Queries!"]</h1>
                 </div>
                 <div class="col-md-6 col-lg-7">
-                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                    <p class="mb-4">
+                      The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done.
+                        <a href="https://htmlcodex.com/contact-form">@SharedLocalizer["Download Now"]</a>.
+                    </p>
                     <form>
-                        <input type="text" class="w-100 form-control p-3 mb-4 border-primary bg-light" placeholder="Your Name">
-                        <input type="email" class="w-100 form-control p-3 mb-4 border-primary bg-light" placeholder="Enter Your Email">
-                        <textarea class="w-100 form-control mb-4 p-3 border-primary bg-light" rows="4" cols="10" placeholder="Your Message"></textarea>
-                        <button class="w-100 btn btn-primary form-control p-3 border-primary bg-primary rounded-pill" type="submit">Submit Now</button>
+                        <input type="text" class="w-100 form-control p-3 mb-4 border-primary bg-light" placeholder="@SharedLocalizer["Your Name"]">
+                        <input type="email" class="w-100 form-control p-3 mb-4 border-primary bg-light" placeholder="@SharedLocalizer["Enter Your Email"]">
+                        <textarea class="w-100 form-control mb-4 p-3 border-primary bg-light" rows="4" cols="10" placeholder="@SharedLocalizer["Your Message"]"></textarea>
+                        <button class="w-100 btn btn-primary form-control p-3 border-primary bg-primary rounded-pill" type="submit">
+                            @SharedLocalizer["Submit Now"]
+                        </button>
                     </form>
                 </div>
                 <div class="col-md-6 col-lg-5">
                     <div>
                         <div class="d-inline-flex w-100 border border-primary p-4 rounded mb-4">
                             <i class="fas fa-map-marker-alt fa-2x text-primary me-4"></i>
-                            <div class="">
-                                <h4>Address</h4>
-                                <p>123 Street, New York, USA</p>
+                            <div>
+                                <h4>@SharedLocalizer["Address"]</h4>
+                                <p> 123 Street, New York, USA </p>
                             </div>
                         </div>
                         <div class="d-inline-flex w-100 border border-primary p-4 rounded mb-4">
                             <i class="fas fa-envelope fa-2x text-primary me-4"></i>
-                            <div class="">
-                                <h4>Mail Us</h4>
+                            <div>
+                                <h4>@SharedLocalizer["Mail Us"]</h4>
                                 <p class="mb-2">info@example.com</p>
                                 <p class="mb-0">support@example.com</p>
                             </div>
                         </div>
                         <div class="d-inline-flex w-100 border border-primary p-4 rounded">
                             <i class="fa fa-phone-alt fa-2x text-primary me-4"></i>
-                            <div class="">
-                                <h4>Telephone</h4>
+                            <div>
+                                <h4>@SharedLocalizer["Telephone"]</h4>
                                 <p class="mb-2">(+012) 3456 7890 123</p>
                                 <p class="mb-0">(+704) 5555 0127 296</p>
                             </div>
