--- a/ITIResturant/ITIResturant/Views/Shared/Home/_Events.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_Events.cshtml
@@ -1,34 +1,34 @@
 ﻿<div class="container-fluid event py-6">
     <div class="container">
         <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
-            <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Latest Events</small>
-            <h1 class="display-5 mb-5">Our Social & Professional Events Gallery</h1>
+            <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3"> @SharedLocalizer["Latest Events"]</small>
+            <h1 class="display-5 mb-5">@SharedLocalizer["Our Social & Professional Events Gallery"]</h1>
         </div>
         <div class="tab-class text-center">
             <ul class="nav nav-pills d-inline-flex justify-content-center mb-5 wow bounceInUp" data-wow-delay="0.1s">
                 <li class="nav-item p-2">
                     <a class="d-flex mx-2 py-2 border border-primary bg-light rounded-pill active" data-bs-toggle="pill" href="#tab-1">
-                        <span class="text-dark" style="width: 150px;">All Events</span>
+                        <span class="text-dark" style="width: 150px;">@SharedLocalizer["All Events"]</span>
                     </a>
                 </li>
                 <li class="nav-item p-2">
                     <a class="d-flex py-2 mx-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-2">
-                        <span class="text-dark" style="width: 150px;">Wedding</span>
+                        <span class="text-dark" style="width: 150px;">@SharedLocalizer["Wedding"]</span>
                     </a>
                 </li>
                 <li class="nav-item p-2">
                     <a class="d-flex mx-2 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-3">
-                        <span class="text-dark" style="width: 150px;">Corporate</span>
+                        <span class="text-dark" style="width: 150px;">@SharedLocalizer["Corporate"]</span>
                     </a>
                 </li>
                 <li class="nav-item p-2">
                     <a class="d-flex mx-2 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-4">
-                        <span class="text-dark" style="width: 150px;">Cocktail</span>
+                        <span class="text-dark" style="width: 150px;">@SharedLocalizer["Cocktail"]</span>
                     </a>
                 </li>
                 <li class="nav-item p-2">
                     <a class="d-flex mx-2 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-5">
-                        <span class="text-dark" style="width: 150px;">Buffet</span>
+                        <span class="text-dark" style="width: 150px;">@SharedLocalizer["Buffet"]</span>
                     </a>
                 </li>
             </ul>
