--- a/ITIResturant/ITIResturant/Views/Shared/Home/_Service.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_Service.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="container-fluid service py-6">
     <div class="container">
         <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
-            <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Our Services</small>
-            <h1 class="display-5 mb-5">What We Offer</h1>
+            <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">  @SharedLocalizer["Services"]</small>
+            <h1 class="display-5 mb-5"> @SharedLocalizer["What We Offer"] </h1>
         </div>
         <div class="row g-4">
             <div class="col-lg-3 col-md-6 col-sm-12 wow bounceInUp" data-wow-delay="0.1s">
@@ -10,7 +10,7 @@
                     <div class="service-content d-flex align-items-center justify-content-center p-4">
                         <div class="service-content-icon text-center">
                             <i class="fas fa-cheese fa-7x text-primary mb-4"></i>
-                            <h4 class="mb-3">Wedding Services</h4>
+                            <h4 class="mb-3">@SharedLocalizer["Wedding Services"]</h4>
                             <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
  
                         </div>
@@ -22,7 +22,7 @@
                     <div class="service-content d-flex align-items-center justify-content-center p-4">
                         <div class="service-content-icon text-center">
                             <i class="fas fa-pizza-slice fa-7x text-primary mb-4"></i>
-                            <h4 class="mb-3">Corporate Catering</h4>
+                            <h4 class="mb-3"> @SharedLocalizer["Corporate Catering"]</h4>
                             <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
  
                         </div>
@@ -34,7 +34,7 @@
                     <div class="service-content d-flex align-items-center justify-content-center p-4">
                         <div class="service-content-icon text-center">
                             <i class="fas fa-hotdog fa-7x text-primary mb-4"></i>
-                            <h4 class="mb-3">Cocktail Reception</h4>
+                            <h4 class="mb-3"> @SharedLocalizer["Cocktail Reception"]</h4>
                             <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
  
                         </div>
@@ -46,7 +46,7 @@
                     <div class="service-content d-flex align-items-center justify-content-center p-4">
                         <div class="service-content-icon text-center">
                             <i class="fas fa-hamburger fa-7x text-primary mb-4"></i>
-                            <h4 class="mb-3">Bento Catering</h4>
+                            <h4 class="mb-3">@SharedLocalizer["Bento Catering"]</h4>
                             <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
  
                         </div>
@@ -58,7 +58,7 @@
                     <div class="service-content d-flex align-items-center justify-content-center p-4">
                         <div class="service-content-icon text-center">
                             <i class="fas fa-wine-glass-alt fa-7x text-primary mb-4"></i>
-                            <h4 class="mb-3">Pub Party</h4>
+                            <h4 class="mb-3">@SharedLocalizer["Pub Party"]</h4>
                             <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
  
                         </div>
@@ -70,7 +70,7 @@
                     <div class="service-content d-flex align-items-center justify-content-center p-4">
                         <div class="service-content-icon text-center">
                             <i class="fas fa-walking fa-7x text-primary mb-4"></i>
-                            <h4 class="mb-3">Home Delivery</h4>
+                            <h4 class="mb-3">@SharedLocalizer["Home Delivery"]</h4>
                             <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
  
                         </div>
@@ -82,7 +82,7 @@
                     <div class="service-content d-flex align-items-center justify-content-center p-4">
                         <div class="service-content-icon text-center">
                             <i class="fas fa-wheelchair fa-7x text-primary mb-4"></i>
-                            <h4 class="mb-3">Sit-down Catering</h4>
+                            <h4 class="mb-3">@SharedLocalizer["Sit-down Catering"]</h4>
                             <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
  
                         </div>
@@ -94,7 +94,7 @@
                     <div class="service-content d-flex align-items-center justify-content-center p-4">
                         <div class="service-content-icon text-center">
                             <i class="fas fa-utensils fa-7x text-primary mb-4"></i>
-                            <h4 class="mb-3">Buffet Catering</h4>
+                            <h4 class="mb-3">@SharedLocalizer["Buffet Catering"]</h4>
                             <p class="mb-4">Contrary to popular belief, ipsum is not simply random.</p>
  
                         </div>
