--- a/ITIResturant/ITIResturant/Views/Shared/Home/_Team.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_Team.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="container-fluid team py-6">
     <div class="container">
         <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
-            <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Our Team</small>
-            <h1 class="display-5 mb-5">We have experienced chef Team</h1>
+            <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3"> @SharedLocalizer["team"]</small>
+            <h1 class="display-5 mb-5">@SharedLocalizer["We have experienced chef Team"]</h1>
         </div>
         <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow bounceInUp" data-wow-delay="0.1s">
@@ -10,7 +10,7 @@
                     <img class="img-fluid rounded-top " src="~/img/team-1.jpg" alt="">
                     <div class="team-content text-center py-3 bg-dark rounded-bottom">
                         <h4 class="text-primary">Henry</h4>
-                        <p class="text-white mb-0">Decoration Chef</p>
+                        <p class="text-white mb-0">@SharedLocalizer["Decoration Chef"]</p>
                     </div>
                     <div class="team-icon d-flex flex-column justify-content-center m-4">
                         <a class="share btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fas fa-share-alt"></i></a>
@@ -25,7 +25,7 @@
                     <img class="img-fluid rounded-top " src="~/img/team-2.jpg" alt="">
                     <div class="team-content text-center py-3 bg-dark rounded-bottom">
                         <h4 class="text-primary">Jemes Born</h4>
-                        <p class="text-white mb-0">Executive Chef</p>
+                        <p class="text-white mb-0">@SharedLocalizer["Executive Chef"]</p>
                     </div>
                     <div class="team-icon d-flex flex-column justify-content-center m-4">
                         <a class="share btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fas fa-share-alt"></i></a>
@@ -40,7 +40,7 @@
                     <img class="img-fluid rounded-top " src="~/img/team-3.jpg" alt="">
                     <div class="team-content text-center py-3 bg-dark rounded-bottom">
                         <h4 class="text-primary">Martin Hill</h4>
-                        <p class="text-white mb-0">Kitchen Porter</p>
+                        <p class="text-white mb-0">@SharedLocalizer["Kitchen Porter"]</p>
                     </div>
                     <div class="team-icon d-flex flex-column justify-content-center m-4">
                         <a class="share btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fas fa-share-alt"></i></a>
@@ -55,7 +55,7 @@
                     <img class="img-fluid rounded-top " src="~/img/team-4.jpg" alt="">
                     <div class="team-content text-center py-3 bg-dark rounded-bottom">
                         <h4 class="text-primary">Adam Smith</h4>
-                        <p class="text-white mb-0">Head Chef</p>
+                        <p class="text-white mb-0">@SharedLocalizer["Head Chef"]</p>
                     </div>
                     <div class="team-icon d-flex flex-column justify-content-center m-4">
                         <a class="share btn btn-primary btn-md-square rounded-circle mb-2" href=""><i class="fas fa-share-alt"></i></a>
