--- a/ITIResturant/ITIResturant/Views/_ViewImports.cshtml
+++ b/ITIResturant/ITIResturant/Views/_ViewImports.cshtml
@@ -1,4 +1,9 @@
 ﻿@using Restaurant.PL
+@using Restaurant.PL.Language
 @using Restaurant.PL.Models
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.Extensions.Localization
+
+@inject IStringLocalizer<SharedResource> SharedLocalizer
+
