--- a/ITIResturant/ITIResturant/Views/Payment/Success.cshtml
+++ b/ITIResturant/ITIResturant/Views/Payment/Success.cshtml
@@ -16,5 +16,9 @@
         <a href="@Url.Action("OrderHistory", "Order")" class="btn btn-outline-secondary mt-3">
             <i class="fas fa-list me-2"></i>View My Orders
         </a>
+        <a asp-controller="CustomerChat" asp-action="Index" class="dropdown-item">
+            Chat with Delivery
+        </a>
+       
     </div>
 </div>
