--- a/ITIResturant/ITIResturant/Views/Shared/Home/_Testimonial.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_Testimonial.cshtml
@@ -1,13 +1,7 @@
 ﻿@using Restaurant.BLL.ModelVM.HomeIndexVm
 @model HomeIndexVm
 
-
-<<<<<<< HEAD
-<h2 class="mt-4 text-center">What Our Customers Say</h2>
-=======
-<<h2 class="mt-4 text-center">@SharedLocalizer["What Our Customers Say"]</h2>
->>>>>>> main
-
+<h2 class="mt-4 text-center">@SharedLocalizer["What Our Customers Say"]</h2>
 @if (Model.Reviews.Any())
 {
     <div class="row mt-4">
