--- a/ITIResturant/ITIResturant/Views/Shared/_IndexLayout.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/_IndexLayout.cshtml
@@ -114,7 +114,10 @@
             extendedTimeOut: 500,   // if hovered, disappear 0.5s later
         };
     </script>
+    <script src="https://widget.cxgenie.ai/widget.js" data-aid="b3bfe0b1-fce8-430d-88d9-d37d98a05536"
 
+         data-lang="ar"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.2/signalr.min.js"></script>
 
     @RenderSection("Scripts", required: false)
 
