--- a/ITIResturant/ITIResturant/Areas/Admin/Views/Shared/_AdminSharedLayout.cshtml
+++ b/ITIResturant/ITIResturant/Areas/Admin/Views/Shared/_AdminSharedLayout.cshtml
@@ -20,6 +20,10 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-house"></i></div>
+                            Home
+                        </a>
                         <div class="sb-sidenav-menu-heading">Management</div>
 
                         <a class="nav-link" asp-area="Admin" asp-controller="Admin" asp-action="Index">
@@ -48,10 +52,7 @@
                             Categories
                         </a>
 
-                        <a class="nav-link" asp-area="Admin" asp-controller="Orders" asp-action="Index">
-                            <div class="sb-nav-link-icon"><i class="fas fa-shopping-cart"></i></div>
-                            Orders
-                        </a>
+           
 
                         <a class="nav-link" asp-area="Admin" asp-controller="Bookings" asp-action="Index">
                             <div class="sb-nav-link-icon"><i class="fas fa-calendar-check"></i></div>
@@ -64,10 +65,6 @@
                             Promo Codes
                         </a>
 
-                        <a class="nav-link" asp-area="Admin" asp-controller="Feedback" asp-action="Index">
-                            <div class="sb-nav-link-icon"><i class="fas fa-comment-dots"></i></div>
-                            Feedback
-                        </a>
 
 
                         <a class="nav-link" asp-area="Admin" asp-controller="EmailNotifications" asp-action="Index">
@@ -75,11 +72,11 @@
                             Email Notifications
                         </a>
 
-
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as: Admin</div>
                 </div>
+               
             </nav>
         </div>
 
